# micro

./: CMakeLists.txt  Dockerfile  index.html  podman-composed.yaml  proto_docs.md  run.sh
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  podman-composed.yaml  proto-doc.yml
ServiceA/: CMakeLists.txt  Dockerfile
ServiceA/src/: main.cpp  service.pb.cc  service.pb.h  service.proto
ServiceB/: CMakeLists.txt  Dockerfile
ServiceB/src/: main.cpp  service.pb.cc  service.pb.h
ServiceC/: CMakeLists.txt  Dockerfile
ServiceC/proto/: service.proto
ServiceC/src/: main.cpp
ServiceD/: CMakeLists.txt  Dockerfile
ServiceD/src/: main.cpp
include/: service.hpp
proto/: service.proto
src/: main.cpp
tests/: CMakeLists.txt  test_service.cpp
